tried to fix the cell spacing for the skills table but does not appear to make much difference.

--- a/css/style.sass
+++ b/css/style.sass
@@ -225,8 +225,8 @@ span
 
   .table
     margin-left: 3%
-    margin-right: 3%
-    width: 94%
+    /*margin-right: 3%*/
+    /*width: 94%*/
     max-width: 94%
 
 /* added to fix footer getting pushed up above the map on small devices with high res but it causes too large top border on med devices/lower res small devices */
@@ -276,6 +276,9 @@ span
   .header
     padding-top: 20px
     padding-bottom: 50px
+
+  .skill-col
+    width: 30%
 
 @media only screen and (min-width: 1024px)
   .letsConnect
